# audible-overlay

./: .gitignore  .zshrc  Makefile  README.md  README_JA.md  index.html  package.json  pnpm-lock.yaml  shell.nix  tailwind.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_monitor.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx  LanguageSelector.tsx  OverlayWindow.tsx  SettingsWindow.tsx  ThemeToggle.tsx  ThresholdInput.tsx
src/hooks/: useAudioMonitor.ts  useMonitor.ts
src/locales/: en.json  ja.json
src/types/: i18n.ts  index.ts
src/utils/: logger.ts  store.ts
tauri-app/: package.json  pnpm-lock.yaml
